test_regress/t/t_force_unpacked_unsup.out
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:22:8: Unsupported: Forced unpacked array variable with elements of complex data type
   22 |   real r_array[2];
      |        ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:21:12: Unsupported: Forced unpacked array variable with elements of complex data type
   21 |   struct_t s_array[3];
      |            ^~~~~~~
%Error: Exiting due to
